--- a/.github/workflows/cloud-n1-openwrt.yaml
+++ b/.github/workflows/cloud-n1-openwrt.yaml
@@ -100,7 +100,7 @@ jobs:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
         PACKAGE_SOC: s905d
         KERNEL_VERSION_NAME: ${{ env.KERNEL_VERSION }}
-        WHOAMI: huangqian8
+        WHOAMI: xx
 
     - name: Organize files
       id: organize
@@ -135,7 +135,7 @@ jobs:
           刷机固件简介：
             打包日期：${{ env.PACKAGED_OUTPUTDATE }}
             内核版本：${{ env.KERNEL_VERSION }}
-            默认IP：192.168.1.1 默认用户名密码： root/password
+            默认IP：192.168.2.254 默认用户名密码： root/password
         artifacts: "${{ env.FIRMWARE }}/*,${{ env.PACKAGED_OUTPUTPATH }}/*"
 
     - name: Remove old Releases
